update roles + scopes..